// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scheduling service adds a scheduled flight 1`] = `
Array [
  ScheduledFlightsAdded {
    "__typename": "ScheduledFlightsAdded",
    "flights": Array [
      Object {
        "arrivalTime": "928p",
        "day": "2021-06-11",
        "departureTime": "1210p",
        "flightNo": "PA576",
      },
      Object {
        "arrivalTime": "502p",
        "day": "2021-06-11",
        "departureTime": "700a",
        "flightNo": "PA872",
      },
    ],
    "route": "SFO-MIA",
  },
]
`;

exports[`Scheduling service adds routes 1`] = `
Array [
  RouteAdded {
    "__typename": "RouteAdded",
    "route": "SFO-MIA",
  },
]
`;

exports[`Scheduling service reduces state from events 1`] = `
RouteSchedule {
  "__typename": "RouteSchedule",
  "flights": Array [
    Object {
      "arrivalTime": "928p",
      "day": "2021-06-11",
      "departureTime": "1210p",
      "flightNo": "PA576",
    },
    Object {
      "arrivalTime": "502p",
      "day": "2021-06-11",
      "departureTime": "700a",
      "flightNo": "PA872",
    },
    Object {
      "arrivalTime": "513p",
      "day": "2021-06-11",
      "departureTime": "700a",
      "flightNo": "PA738",
    },
    Object {
      "arrivalTime": "928p",
      "day": "2021-06-12",
      "departureTime": "1210p",
      "flightNo": "PA576",
    },
    Object {
      "arrivalTime": "502p",
      "day": "2021-06-12",
      "departureTime": "700a",
      "flightNo": "PA872",
    },
    Object {
      "arrivalTime": "513p",
      "day": "2021-06-12",
      "departureTime": "700a",
      "flightNo": "PA738",
    },
  ],
  "route": "SFO-MIA",
}
`;
